# CustomerSupport_Agents

./: README.md  pyproject.toml
data/: sample_conversations.json
output/: support_response_20250513_225954_My_payment_failed_for_my_subscription_what_should_I_do_Its_u.md  support_response_20250515_171150_My_payment_failed_for_my_subscription_what_should_I_do_Its_u.md
src/customer_support_crew/: crew.py  main.py
src/customer_support_crew/config/: agents.yaml  tasks.yaml
src/customer_support_crew/tools/: conversation_query_tool.py
