[project]
name = "customer_support_crew"
version = "0.1.0"
description = "customer_support_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
customer_support_crew = "customer_support_crew.main:run"
run_crew = "customer_support_crew.main:run"
train = "customer_support_crew.main:train"
replay = "customer_support_crew.main:replay"
test = "customer_support_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
